Adicionada uma nova página no projeto contat.html e link dela na página index.html

--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
         <h1>Sejam Bem Vind@s na Capacitação de Controle de Versionamento com Git /GitHub</h1> <br>
 
         <p>
-            Para saber mais sobre o curso:<a href="../Git/sobre.html">Clique aqui</a>
+            Para saber mais sobre o curso:<a href="./sobre.html">Clique aqui</a>
         </p><br>
 
         <p>
-            Para acessar a primeira aula: <a href="../Git/aula.html">Clique aqui</a>
+            Para acessar a primeira aula: <a href="./aula.html">Clique aqui</a>
+        </p>
+        <p>
+            Para acessar a página contato: <a href="./contato.html">Clique aqui</a>
         </p>
     </body>
 </html>
