--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             Para acessar a primeira aula: <a href="./aula.html">Clique aqui</a>
         </p>
         <p>
-            Para acessar a página contato: <a href="./contato.html">Clique aqui</a>
+            Para acessar a página contato: <a href="./contato.html">Clique aqui !</a>
         </p>
     </body>
 </html>
