--- a/index.html
+++ b/index.html
@@ -19,5 +19,9 @@
         <p>
             Para acessar a página contato: <a href="./contato.html">Clique aqui</a>
         </p>
+
+        <p>
+            Só tem na página contato
+        </p>
     </body>
 </html>
