--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Capacitação Git/Github</title>
     </head>
-    <body style="background-color: greenyellow">
+    <body style="background-color: yellow">
         <h1>Sejam Bem Vind@s na Capacitação de Controle de Versionamento com Git /GitHub</h1> <br>
 
         <p>
