--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Capacitação Git/Github</title>
     </head>
-    <body style="background-color: yellow">
+    <body style="background-color: red">
         <h1>Sejam Bem Vind@s na Capacitação de Controle de Versionamento com Git /GitHub</h1> <br>
 
         <p>
@@ -21,7 +21,7 @@
         </p>
 
         <p>
-            Só tem na página contato
+            Só tem na página contato red
         </p>
     </body>
 </html>
